--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </header>
   <main>
     <div class="card">
-        <img src="img/1 1.png" alt="дівчина">
+        <img src="1 1.png" alt="дівчина">
         <div>
             <span>LIFESTYLE</span>
             <h2>More than just a music festival </h2>
@@ -35,7 +35,7 @@
         </div>
     </div>
     <div class="card">
-<img src="img/2 1.png" alt="кава">
+<img src="2 1.png" alt="кава">
 <div>
     <span>LIFESTYLE</span>
     <h2>Life tastes better with coffee</h2>
@@ -43,7 +43,7 @@
 </div>
     </div>
     <div class="card">
-        <img src="img/3 1.png" alt="байрактар ла ла ла ла ла ла ла ла ла">
+        <img src="3 1.png" alt="байрактар ла ла ла ла ла ла ла ла ла">
         <div>
             <span>PHOTODAIRY</span>
             <h2>American dream</h2>
@@ -51,7 +51,7 @@
         </div>
     </div>
     <div class="card">
-        <img src="img/4 1.png" alt="хлопець">
+        <img src="4 1.png" alt="хлопець">
         <div>
             <span>PHOTODAIRY</span>
             <h2>A day exploring the Alps</h2>
